--- a/templates/moves-index.html.j2
+++ b/templates/moves-index.html.j2
@@ -1,5 +1,5 @@
 {% extends "base.html.j2" %}
-{% import "macros/tables.py" as table_utils %}
+{% import "macros/tables.j2" as table_utils %}
 {% block title %}Moves - serfetchdex{% endblock %}
 {% block head %}
 <script type="text/javascript" src="/static/js/sort-movetable.js"></script>
