--- a/templates/pokemon.html.j2
+++ b/templates/pokemon.html.j2
@@ -1,5 +1,5 @@
 {% extends "base.html.j2" %}
-{% import "macros/tables.py" as table_utils %}
+{% import "macros/tables.j2" as table_utils %}
 {% block title %}{{pokemon.name}}{%if pokemon.form and pokemon.form.name %} ({{ pokemon.form.name }} Form){% endif %} - serfetchdex{% endblock %}
 {% block head %}
 <script type="text/javascript" src="/static/js/sort-movetable.js"></script>
@@ -66,6 +66,10 @@
             </table>
         </span>
     </section>
+    {% if evos %}<section class="evolution">
+        <h2>Evolution</h2>
+        {{ table_utils.evolution_table(evos) }}
+    </section>{% endif %}
     <section class="pokemon-details">
         {{ table_utils.type_chart(efficiencies) }}
         <table class="pokemon-misc">
