--- a/static/style.css
+++ b/static/style.css
@@ -245,6 +245,10 @@ table.pokemon-stats > thead > tr {
     border-top: none;
 }
 
+table.pokemon-stats th {
+    column-span: all;
+}
+
 table.pokemon-stats h3 {
     margin-top: 0;
 }
@@ -633,6 +637,41 @@ table.movelist.leveluplist td:nth-of-type(2), table.movelist.leveluplist th:nth-
     width: 8em;
 }
 
+/* evolution divs new */
+.evolutions-wrapper {
+    display: grid;
+    grid-auto-columns: minmax(25%, 50%);
+}
+
+.evolutions-wrapper figure {
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.evolutions-wrapper figure:not(:first-of-type)::before {
+    content: "→";
+    position: relative;
+    left: -45%;
+    top: 30%;
+}
+
+.evolutions-wrapper figure.stretch-cell {
+    justify-content: center;
+}
+
+.evolutions-wrapper figcaption {
+    text-align: center;
+}
+
+.evolutions-wrapper figcaption p {
+    display: block;
+    width: 75%;
+    margin: 0 auto;
+}
+
+
 footer {
     font-size: .75em;
     border-top: 1px solid #cccbc3;
@@ -840,6 +879,7 @@ footer {
 
     table.pokemon-misc th {
         text-align: center;
+
     }
 
     table.pokemon-misc td {
