--- a/templates/index.html.j2
+++ b/templates/index.html.j2
@@ -7,4 +7,7 @@
         <li><a href="/moves">moves</a></li>
         <li><a href="/abilities">abilities</a></li>
     </ul>
+    <script type="text/javascript">
+        
+    </script>
 {% endblock %}
