--- a/templates/move.html.j2
+++ b/templates/move.html.j2
@@ -34,11 +34,13 @@
                     </tr>
                         <th>Target</th>
                         <th>Priority</th>
+                        <th>&nbsp;</th>
                     <tr>
                     </tr>
                     <tr>
                         <td>{{move.target.name}}</td>
                         <td>{{move.priority}}</td>
+                        <td>&nbsp;</td>
                     </tr>
                 </tbody>
             </table>{% endif %}
