improve searchbar appearance and update index page

--- a/static/icons/pokemon.css
+++ b/static/icons/pokemon.css
@@ -453,7 +453,7 @@
             height: 56px;
         }
 
-        .party-sprite.vivillon-pokeball {
+        .party-sprite.vivillon-poke-ball {
             background-position: -544px -56px;
             width: 68px;
             height: 56px;
