--- a/static/style.css
+++ b/static/style.css
@@ -81,7 +81,7 @@ nav {
     left: 0;
     height: min-content;
     width: 100%;
-    padding-left: 1rem;
+    padding: 0 2vw 0 8vw;
     background: #6a9c78;
     box-shadow: 0 0 5px 5px #295335b5;
     display: flex;
@@ -102,6 +102,10 @@ nav > ul > li {
     font-weight: bold;
     display: flex;
     padding: 1.75rem;
+}
+
+nav > ul > li::after {
+    content: "\A0\25BC";
 }
 
 nav > ul > li > ul {
@@ -141,8 +145,54 @@ nav form {
 }
 
 #search-bar {
-    background: #f9f8ed;
+    background: #f9f8ed url("/static/icons/search-solid.png") no-repeat 3px/1em;
     border: none;
+    font-size: 1.3em;
+    font-weight: light;
+    transition: width 0.3s ease;
+    padding-left: calc(1.3em + 3px);
+    border-radius: 8em;
+}
+
+#search-bar:focus {
+    outline: #8fe58f 1px solid;
+    box-shadow: 0 0 7px #c4e3cb;
+}
+
+@media screen and (min-width: 801px) {
+    #search-bar {
+        width: 6em;
+        transition: width 0.3s ease;
+    }
+
+    #search-bar:focus {
+        width: 12em;
+    }
+}
+
+/* Index page */
+.featured {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.featured section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 0 2rem;
+    flex: 1 1 0px
+}
+
+.featured section.pokemon a, .featured section.move a {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.featured section.move .type-bar-small {
+    margin-top: 1em;
 }
 
 /* Move page */
