--- a/templates/base.html.j2
+++ b/templates/base.html.j2
@@ -25,6 +25,12 @@
                         <li><a href="/moves">moves</a></li>
                         <li><a href="/abilities">abilities</a></li>
                         <li><a href="/pokemon">pokémon</a></li>
+                        <li><a href="/items">items</a></li>
+                    </ul>
+                </li>
+                <li>network
+                    <ul>
+                        <li><a href="https://serfetch.kyeugh.online">serfetch</a></li>
                     </ul>
                 </li>
             </ul>
@@ -37,7 +43,7 @@
                 {% block content %}{% endblock %}
             </content>
             <footer>
-                <p>serfetch/serfetchdex &copy; kyeugh 2020</p>
+                <p>serfetch/serfetchdex &copy; kyeugh 2021</p>
                 <p>
                     data courtesy of <a href="https://github.com/CatTrinket" target="_blank">Trinket</a>,
                     <a href="https://veekun.com">veekun</a>, &amp; <a href="https://bulbapedia.bulbagarden.net" target="_blank">Bulbapedia</a>.
