--- a/static/style.css
+++ b/static/style.css
@@ -183,6 +183,7 @@ nav form {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+    text-align: center;
 }
 
 .featured section {
@@ -287,6 +288,7 @@ ul.flags > li > ul {
     display: flex;
     flex-direction: column;
     width: min-content;
+    text-align: center;
 }
 
 .pokemon-portrait > img, .pokemon-portrait > a > img {
@@ -424,19 +426,33 @@ table.pokemon-misc h3 {
     margin: 0 auto;
 }
 
-.other-forms {
+.other-forms, .associated-pokemon {
     display: flex;
     flex-wrap: wrap;
 }
 
-.other-forms  img {
+.other-forms img, .associated-pokemon img {
     transform: scale(.75);
 }
 
-.other-forms h4 {
+.other-forms h4, .associated-pokemon h4 {
     text-align: center;
     margin: 0;
 }
+
+table.item-misc {
+    width: 40%;
+    margin: 0 2rem;
+}
+
+.assoc-pkmn-head th {
+    text-align: center;
+}
+
+.assoc-pkmn {
+    display: flex;
+}
+
 /* Type matchup chart */
 
 .type-efficiencies {
@@ -470,6 +486,60 @@ table.pokemon-misc h3 {
 
 .type-efficiencies table th, .type-efficiencies table td {
     padding: 0;
+}
+
+.item-info {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.item-info > * {
+    padding: 1rem;
+}
+
+.item-info dl {
+    width: max-content;
+    border-right: 2px solid #cccbc3;
+}
+
+.item-info dt {
+    font-weight: bold;
+}
+
+.item-description {
+    width: 75%;
+}
+
+@media screen and (max-width: 800px) {
+    .item-info {
+        flex-wrap: wrap;
+    }
+
+    table.item-misc {
+        width: 100%;
+        margin: 0;
+        text-align: center;
+    }
+
+    table.item-misc td:first-of-type {
+        width: 40%;
+    }
+
+    .item-description {
+        width: 100%;
+    }
+
+    .item-info dl {
+        border-right: none;
+    }
+}
+
+.item-info .sprite-wrapper {
+    display: flex;
+    align-items: center;
+    background: #c4e3cb;
+    border-radius: 100%;
 }
 
 /* Tables */
@@ -555,8 +625,13 @@ table.pokemonlist ul {
     width: 2rem;
 }
 
+th.pokemon-stat-cell {
+    font-size: 0.85em;
+}
+
 td.pokemon-stat-cell {
     text-align: right;
+    0.9em;
 }
 
 .level-cell {
@@ -729,14 +804,14 @@ table.movelist.leveluplist td:nth-of-type(2), table.movelist.leveluplist th:nth-
     width: 8em;
 }
 
-table.maxlist td:nth-of-type(2),
-table.maxlist th:nth-of-type(2) {
+table.maxlist td:nth-of-type(3),
+table.maxlist th:nth-of-type(3) {
     width: 75%;
 }
 
 @media only screen and (max-width: 400px) {
-    table.maxlist td:nth-of-type(2),
-    table.maxlist th:nth-of-type(2) {
+    table.maxlist td:nth-of-type(3),
+    table.maxlist th:nth-of-type(3) {
         width: 75%;
         padding-left: 1.5rem;
     }
@@ -958,6 +1033,12 @@ footer {
 
     nav img {
         left: -15px;
+    }
+
+    nav > ul {
+        justify-content: space-around;
+        margin: 0 1rem 1rem;
+        width: 100%;
     }
 
     nav > ul > li {
